manifests/showks-canvas-takaishi/manifest.yaml
---
# Source: showks-canvas/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showks-canvas-takaishi
  namespace: showks
  labels:
    app: showks-canvas-takaishi
    class: showks-canvas
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: app-port
  selector:
    app: showks-canvas-takaishi

---
# Source: showks-canvas/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showks-canvas-takaishi
  namespace: showks
  labels:
    app: showks-canvas-takaishi
    class: showks-canvas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: showks-canvas-takaishi
  template:
    metadata:
      labels:
        app: showks-canvas-takaishi
        class: showks-canvas
    spec:
      containers:
        - name: showks-canvas-takaishi
          image: cloudnativedaysjp/showks-canvas-takaishi:prod-39f6fddb62f6981dab3a7cf5228392cbca7bf8d6
          ports:
            - name: app-port
              containerPort: 8080
              protocol: TCP

---
# Source: showks-canvas/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: showks-canvas-takaishi
  namespace: showks
  labels:
    class: showks-canvas
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "showks-canvas-takaishi"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - showks-canvas-takaishi.showks.cloudnativedays.jp
      secretName: tls-certificate
  rules:
  - host: showks-canvas-takaishi.showks.cloudnativedays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: showks-canvas-takaishi
          servicePort: 8080
